--- a/index.html
+++ b/index.html
@@ -4,10 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css">    
     <title>Block Puzzle</title>
 </head>
-<body>
+<body onload="criaBloco()">
+    
+    <main>
+        <div id="tuboOne" class="tubo"></div>
+        <div id="tuboTwo" class="tubo"></div>
+        <div id="tuboThree" class="tubo"></div>
+        <div id="tuboFour" class="tubo"></div>
+
+        <div id="tubo-vazio">
+            
+        </div>
+    </main>
+
     <script src="js/script.js"></script>
 </body>
 </html>
