--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <header>
-        <button type="button" id="bttn" onclick="criarBloco">Reset</button>
+        <button type="button" id="bttn" onclick="criaBloco()">Reset</button>
 
         <span>score: <span id="contador">1234</span> </span>
 
@@ -19,20 +19,27 @@
 
     <main>
         <section class="tubo">
+
+        </section>
+
+        <section class="tubo">
+
+        </section>
+
+        <section class="tubo">
+
+        </section>
+
+        <section class="tubo">
             <div class="blockX"></div>
             <div class="blockTriangulo"></div>
             <div class="blockCirculo"></div>
             <div class="blockQuadrado"></div>
         </section>
-        <section class="tubo">
+
+        <section id="tubo-vazio">
 
         </section>
-        <section class="tubo">
-
-        </section>
-        <section class="tubo">
-        </section>
-        <section id="tubo-vazio"></section>
     </main>
 
     <footer>
