--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body onload="criaBloco()">
 
     <header>
-        <button type="button" id="bttn">Reset</button>
+        <button type="button" id="bttn" onclick="reset()">Reset</button>
 
         <span>score: <span id="contador">1234</span> </span>
 
