--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <header>
         <button type="button" id="bttn" onclick="reset()">Reset</button>
 
-        <span>score: <span id="contador">1234</span> </span>
+        <span>score:<span id="contador">1234</span> </span>
+        <!-- transformar em string composta -->
 
         <div id="scoreHistory"></div>
     </header>
