--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </main>
 
     <footer>
-        <p>Este projeto é apenas <span>ilustrativo</span>. Estas páginas foram desenvolvidas como atividade da Disciplina Programação para Web I.</p>
+        <p>Este projeto é apenas <span>ilustrativo.</span> Estas páginas foram desenvolvidas como atividade da Disciplina Programação para Web I.</p>
     </footer>
 
     <script src="js/script.js"></script>
