--- a/index.html
+++ b/index.html
@@ -11,30 +11,24 @@
 <body onload="criaBloco()">
 
     <header>
-        <button type="button" id="bttn" onclick="reset()">Reset</button>
+        <button type="button" id="bttn" onclick="reset()">RESET</button>
 
-        <span>score:<span id="contador">1234</span> </span>
+        <span>
+            SCORE: <span id="contador">1234</span> 
+        </span>
         <!-- transformar em string composta -->
 
         <div id="scoreHistory"></div>
     </header>
 
     <main>
-        <section class="tubo">
+        <section class="tubo"></section>
 
-        </section>
+        <section class="tubo"></section>
 
-        <section class="tubo">
+        <section class="tubo"></section>
 
-        </section>
-
-        <section class="tubo">
-
-        </section>
-
-        <section class="tubo">
-            
-        </section>
+        <section class="tubo"></section>
 
         <section id="tubo-vazio">
             <!-- <div class="blockX"></div>
