--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body onload="criaBloco()">
 
     <header>
-        <button type="button" id="bttn" onclick="reset()">RESET</button>
+        <button type="button" id="bttn" onclick="criaBloco()">RESET</button>
 
         <span>
             SCORE: <span id="contador">1234</span> 
@@ -39,5 +39,6 @@
     </footer>
 
     <script src="js/script.js"></script>
+    <!-- <script src="js/script1.js"></script> -->
 </body>
 </html>
