--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body onload="criaBloco()">
 
     <header>
-        <button type="button" id="bttn" onclick="criaBloco()">RESET</button>
+        <button type="button" id="bttn" onclick="reset()">RESET</button>
 
         <span>
             SCORE: <span id="contador">1234</span> 
