--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
     <header>
         <button type="button" id="bttn" onclick="reset()">RESET</button>
 
-        <span>
-            SCORE: <span id="contador">1234</span> 
-        </span>
+        <span> SCORE: <span id="contador">1234</span> </span>
         <!-- transformar em string composta -->
 
         <div id="scoreHistory"></div>
@@ -30,8 +28,7 @@
 
         <section class="tubo"></section>
 
-        <section id="tubo-vazio">
-        </section>
+        <section id="tubo-vazio"></section>
     </main>
 
     <footer>
@@ -39,6 +36,5 @@
     </footer>
 
     <script src="js/script.js"></script>
-    <!-- <script src="js/script1.js"></script> -->
 </body>
 </html>
