--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <p>Este projeto é apenas <span>ilustrativo.</span> Estas páginas foram desenvolvidas como atividade da Disciplina Programação para Web I.</p>
     </footer>
 
-    <script src="js/script.js"></script>
+    <script src="js/script.js" defer></script>
+    <!-- <script src="js/drop.js" defer></script> -->
 </body>
 </html>
