--- a/index.html
+++ b/index.html
@@ -14,21 +14,20 @@
         <button type="button" id="bttn" onclick="reset()">RESET</button>
 
         <span> SCORE: <span id="contador">0</span> </span>
-        <!-- transformar em string composta -->
 
         <div id="scoreHistory"></div>
     </header>
 
     <main>
-        <section class="tubo"></section>
+        <section class="tubo create"></section>
+
+        <section class="tubo create"></section>
+
+        <section class="tubo create"></section>
+
+        <section class="tubo create"></section>
 
         <section class="tubo"></section>
-
-        <section class="tubo"></section>
-
-        <section class="tubo"></section>
-
-        <section id="tubo-vazio"></section>
     </main>
 
     <footer>
@@ -36,6 +35,5 @@
     </footer>
 
     <script src="js/script.js" defer></script>
-    <!-- <script src="js/drop.js" defer></script> -->
 </body>
 </html>
