--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
     </header>
 
     <main>
-        <section class="tubo create"></section>
-
-        <section class="tubo create"></section>
-
-        <section class="tubo create"></section>
-
-        <section class="tubo create"></section>
+        <section class="tubo"></section>
 
         <section class="tubo"></section>
+
+        <section class="tubo"></section>
+
+        <section class="tubo"></section>
+
+        <section id="tubo-vazio"></section>
     </main>
 
     <footer>
