--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
         <div id="scoreHistory"></div>
     </header>
 
-    <main>
-        <section class="tubo"></section>
+    <main id="containerMain">
+        <section class="tubo create"></section>
+
+        <section class="tubo create"></section>
+
+        <section class="tubo create"></section>
+
+        <section class="tubo create"></section>
 
         <section class="tubo"></section>
-
-        <section class="tubo"></section>
-
-        <section class="tubo"></section>
-
-        <section id="tubo-vazio"></section>
     </main>
 
     <footer>
