--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     </header>
 
     <main id="containerMain">
+        <section class="tubo create"></section>
 
         <section class="tubo create"></section>
 
