--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <link rel="shortcut icon" href="assets/trevo.png" type="image/x-icon">
     <title>Block Puzzle</title>
 </head>
+
 <body onload="criaBloco()">
 
     <header>
@@ -18,7 +20,7 @@
         <div id="scoreHistory"></div>
     </header>
 
-    <main>
+    <main id="containerMain">
         <section class="tubo create"></section>
 
         <section class="tubo create"></section>
@@ -31,9 +33,11 @@
     </main>
 
     <footer>
-        <p>Este projeto é apenas <span>ilustrativo.</span> Estas páginas foram desenvolvidas como atividade da Disciplina Programação para Web I.</p>
+        <p>Este projeto é apenas <span>ilustrativo.</span> Estas páginas foram desenvolvidas como atividade da
+            Disciplina Programação para Web I.</p>
     </footer>
 
     <script src="js/script.js" defer></script>
 </body>
+
 </html>
