--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
     </main>
 
     <footer>
-        <p>Este projeto é apenas <span>ilustrativo.</span> Estas páginas foram desenvolvidas como atividade da
-            Disciplina Programação para Web I.</p>
+        <p>Este projeto é apenas <span>ilustrativo.</span> Estas páginas foram desenvolvidas como atividade da Disciplina Programação para Web I.</p>
     </footer>
 
     <script src="js/script.js" defer></script>
