--- a/indexVitoria.html
+++ b/indexVitoria.html
@@ -13,7 +13,7 @@
 <body>
 
     <header>
-        <button type="button" id="bttnHeader" onclick="reset()">RESET</button>
+        <button type="button" id="bttnHeader" disabled>RESET</button>
 
         <span> SCORE: <span id="contador">0</span> </span>
 
@@ -25,17 +25,17 @@
             
             <div id="containerDados">
                 <div class="dados">
-                    <span>1</span>
+                    <span id="valoresJogos">1</span>
                     <h2>Sequência de jogos</h2>
                 </div>
 
                 <div class="dados">
-                    <span>3</span>
+                    <span class="valoresPontuação">3</span>
                     <h2>Menor Pontuação</h2>
                 </div>
 
                 <div class="dados">
-                    <span>0</span>
+                    <span class="valoresVitoria">0</span>
                     <h2>Sequência de Vitórias</h2>
                 </div>
             </div>
