Atualizar o indexVitoria.html

--- a/indexVitoria.html
+++ b/indexVitoria.html
@@ -46,19 +46,19 @@
                 <div class="score-model">
                     <h3 id="colocacao">1</h3>
 
-                    <span id="pontuacao">130</span>
+                    <span id="pontuacao1"></span>
                 </div>
 
                 <div class="score-model">
                     <h3 id="colocacao">2</h3>
 
-                    <span id="pontuacao">170</span>
+                    <span id="pontuacao2"></span>
                 </div>
 
                 <div class="score-model">
                     <h3 id="colocacao">3</h3>
 
-                    <span id="pontuacao">230</span>
+                    <span id="pontuacao3"></span>
                 </div>
             </div>
 
