Atualizar o indexVitoria.html

--- a/indexVitoria.html
+++ b/indexVitoria.html
@@ -71,6 +71,7 @@
     </footer>
 
     <script src="js/script.js" defer></script>
+    <script src="js/scriptVitoria.js"></script>
 </body>
 
 </html>
